...

enum class SortingField(val value: String) {
    Intelligence("intelligence"),
    Strength("strength"),
    Speed("speed"),
    Durability("durability"),
    Power("power"),
    Combat("combat"),
    Average("average"),
}

enum class SortingDirection(val value: String) {
    Asc("asc"),
...
