...

enum class NavItem(
    val navCommand: NavCommand,
    val icon: ImageVector,
) {
    HOME(NavCommand.Home, Icons.Outlined.Home),
    SEARCH(NavCommand.Search, Icons.Outlined.Search),
    TOPS(NavCommand.Tops, Icons.Outlined.MilitaryTech),
    FAVORITES(NavCommand.Favorites, Icons.Outlined.FavoriteBorder),
}
